traces/bug_704.txt
src/bamglib/Mesh2.cpp:1115: error: DEAD_STORE
  The value written to &det2 (type long) is never used.
Showing all 1 steps of the trace


src/bamglib/Mesh2.cpp:1115:3: Write of unused value
1113.     // we turn around a in the  direct sens  
1114.      
1115.     Icoor2 det2 = v2 ? det(*v2,a,b): -1 , det1;
          ^
1116.     if(v2) // normal case 
1117.       det2 = det(*v2,a,b);
